@@ -4,13 +4,14 @@
 %
 
 %input feta-eindelijk;
-input feta-toevallig;
+%input feta-toevallig;
 %input feta-puntje;
-%input feta-bolletjes;	
+input feta-bolletjes;	
 %input feta-schrift;
 %input feta-banier;
 %	input feta-slag;
-input feta-klef;
+%input feta-klef;
+input feta-haak;
 %	input feta-haak;
 %input feta-timesig;
 %input feta-pendaal;
