@@ -1,5 +1,11 @@
 2005-05-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/system-start-delimiter.cc (staff_bracket): use glyphs.
+
+	* mf/feta-generic.mf: include feta-haak.
+
+	* mf/feta-haak.mf: rewrite. Make separate glyphs for the tips 
+
 	* scm/framework-ps.scm (write-preamble): only load fonts if their
 	filename is a string. 
 
